tests/neg-custom-args/captures/apply-fresh.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/apply-fresh.scala:17:15 ----------------------------------
17 |  val _: Ref = x // error
   |               ^
   |               Found:    (x : Ref^{any})
   |               Required: Ref
   |
   |               Note that capability `any` cannot flow into capture set {}.
   |
   |               where:    any is a root capability in the type of value x
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/apply-fresh.scala:21:15 ----------------------------------
21 |  val _: Ref = y // error
   |               ^
   |               Found:    (y : Ref^{any})
   |               Required: Ref
   |
   |               Note that capability `any` cannot flow into capture set {}.
   |
   |               where:    any is a root capability in the type of value y
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/apply-fresh.scala:25:15 ----------------------------------
25 |  val _: Ref = z // error
   |               ^
   |               Found:    (z : Ref^{bar.newRef})
   |               Required: Ref
   |
   |               Note that capability `bar.newRef` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
